--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^5.1.3"
+    "husky": "^5.1.3",
+    "prettier": "^2.2.1"
   },
   "homepage": "https://github.com/wizeline/optimizely-sync#readme",
   "keywords": [
