--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "semantic-release": "^17.4.2"
   },
   "homepage": "https://github.com/wizeline/optimizely-sync#readme",
   "keywords": [
@@ -25,10 +26,11 @@
   "name": "@wizeline/optimizely-sync",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wizeline/optimizely-sync.git"
+    "url": "https://github.com/wizeline/optimizely-sync.git"
   },
   "scripts": {
-    "commit": "cz"
+    "commit": "cz",
+    "semantic-release": "semantic-release"
   },
-  "version": "0.0.0"
+  "version": "0.0.0-development"
 }
