--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "semantic-release": "^17.4.2"
+    "semantic-release": "^17.4.2",
+    "typescript": "^4.2.3"
   },
   "homepage": "https://github.com/wizeline/optimizely-sync#readme",
   "keywords": [
@@ -29,6 +30,7 @@
     "url": "https://github.com/wizeline/optimizely-sync.git"
   },
   "scripts": {
+    "build": "rm -rf dist; tsc",
     "commit": "cz",
     "semantic-release": "semantic-release"
   },
