--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "url": "https://github.com/wizeline/optimizely-sync/issues"
   },
   "dependencies": {
+    "node-fetch": "^2.6.1"
   },
   "description": "Infrastructure as Code for Optimizely",
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@types/node-fetch": "^2.5.8",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
