--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "url": "https://github.com/wizeline/optimizely-sync/issues"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "ramda": "^0.27.1"
   },
   "description": "Infrastructure as Code for Optimizely",
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@types/node-fetch": "^2.5.8",
+    "@types/ramda": "^0.27.38",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
