--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@commitlint/config-conventional": "^12.0.1",
     "@types/node-fetch": "^2.5.8",
     "@types/ramda": "^0.27.38",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
@@ -37,6 +41,8 @@
   "scripts": {
     "build": "rm -rf dist; tsc",
     "commit": "cz",
+    "lint": "npm run lint:eslint",
+    "lint:eslint": "eslint . --ext .js,.ts --max-warnings=0",
     "semantic-release": "semantic-release"
   },
   "version": "0.0.0-development"
