--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "bin": {
+    "optimizely-sync": "./dist/cli.js"
+  },
   "bugs": {
     "url": "https://github.com/wizeline/optimizely-sync/issues"
   },
@@ -32,7 +35,7 @@
     "iac"
   ],
   "license": "ISC",
-  "main": "index.js",
+  "main": "dist/index.js",
   "name": "@wizeline/optimizely-sync",
   "repository": {
     "type": "git",
