--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/node-fetch": "^2.5.8",
     "@types/ramda": "^0.27.38",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
