--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   "license": "ISC",
   "main": "dist/index.js",
   "name": "@wizeline/optimizely-sync",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/wizeline/optimizely-sync.git"
