--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -54,6 +54,9 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Build
+        run: npm run build
+
       - name: Release
         run: npx semantic-release
         env:
