build: add and configure jest NPM dependency

--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -36,6 +36,10 @@ jobs:
       - name: Lint
         run: npm run lint
 
+      # Run tests
+      - name: Lint
+        run: npm test
+
   release:
     # Only release on push to main
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
