--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@commitlint/config-conventional": "^12.0.1",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
+    "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.8",
     "@types/ramda": "^0.27.38",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
@@ -24,9 +25,12 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "semantic-release": "^17.4.2",
+    "ts-jest": "^26.5.3",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "homepage": "https://github.com/wizeline/optimizely-sync#readme",
@@ -52,7 +56,8 @@
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint . --ext .js,.ts --max-warnings=0",
     "lint:prettier": "prettier --check .",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "test": "jest"
   },
   "version": "1.0.1"
 }
