--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest": "^24.3.1",
-    "husky": "^4.3.8",
+    "husky": "^5.2.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
@@ -57,6 +57,7 @@
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint . --ext .js,.ts --max-warnings=0",
     "lint:prettier": "prettier --check .",
+    "prepare": "husky install",
     "semantic-release": "semantic-release",
     "test": "jest"
   },
